--- a/styles/_banner.scss
+++ b/styles/_banner.scss
@@ -5,20 +5,26 @@
     width: 100%;
     height: 900px;
     position: relative;
-    
+    justify-content: center;
 
+   div{
+    position: absolute;
+    width: 100%;
+    
+   
     h1{
-        position: absolute;
-        top: 450px;
-    color: white;
-    font-size: 5rem;
-    left: 35%;
-    font-family: verdana;
+       
+        
+        color: white;
+        font-size: 5rem; 
+        font-family: verdana;
+        text-align: center;
     }
 
     figure{
-        position: absolute;
-        top: 100px;
-        left: 45%;
+        text-align: center;
+        padding-top: 150px;
+        
     }
+   }
 }
