--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -2,20 +2,19 @@
 header{
     
     
-    background: none;
+    background: transparent;
     position: fixed;
     width: 100%;
-    left: 35%;
     z-index: 2;
-   
-    
-    
+    -webkit-transition: background-color .5s;
 }
 
 .header-container{
     display: flex;
+   // background-color: #000;
+   justify-content: center;
+
     
-    align-items: center;
     
     h1{
         font-family: verdana;
