--- a/styles/_introduccion.scss
+++ b/styles/_introduccion.scss
@@ -2,12 +2,19 @@
     max-width: 1330px;
     margin: auto;
     margin-top: 30px;
+     
+   .container-cafe{
+       display: flex;
+   }
 
     h2{
         font-family: arial;
         font-size: 3rem;
         text-align: center;
     }
+   .cafe{
+   
+  
 
     p{
         font-family: arial;
@@ -16,7 +23,18 @@
         margin: 15px 0;
         line-height: 40px;
         padding-left: 20px;
-        padding-right: 400px;
+        padding-right: 100px;
 
     }
+
+}
+
+.pic{
+    img{
+        border-radius: 5%;
+        margin-right: 25px;
+        margin-top: 40px;
+        object-fit: cover;
+    }
+}
 }
