--- a/styles/_introduccion.scss
+++ b/styles/_introduccion.scss
@@ -2,16 +2,12 @@
     max-width: 1330px;
     margin: auto;
     margin-top: 30px;
-     
+    border-bottom: 1px solid rgba(88, 38, 38, 0.74);
    .container-cafe{
        display: flex;
    }
 
-    h2{
-        font-family: arial;
-        font-size: 3rem;
-        text-align: center;
-    }
+  
    .cafe{
    
   
