--- a/styles/_organico.scss
+++ b/styles/_organico.scss
@@ -12,9 +12,14 @@
         h2{
             color: white;
         }
-    
+        h3{
+            padding-top: 25px;
+            color: white;
+            font-family: verdana;
+
+        }
         p{
-            padding-top: 50px;
+            padding-top: 25px;
             text-align: justify;
             color: white;
             font-size: 1.2rem;
