--- a/styles/styles.css
+++ b/styles/styles.css
@@ -196,12 +196,41 @@ header {
   color: white;
 }
 
+.cafeorganico .container-organico h3 {
+  padding-top: 25px;
+  color: white;
+  font-family: verdana;
+}
+
 .cafeorganico .container-organico p {
-  padding-top: 50px;
+  padding-top: 25px;
   text-align: justify;
   color: white;
   font-size: 1.2rem;
   font-family: Verdana;
   line-height: 30px;
+}
+
+.beneficios {
+  margin-top: 20px;
+}
+
+.beneficios .container-beneficios {
+  padding-top: 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 20px;
+}
+
+.beneficios .container-beneficios img {
+  padding-left: 300px;
+}
+
+.beneficios .container-beneficios p {
+  font-family: arial;
+  font-size: 1.5rem;
+  line-height: 70px;
+  padding-left: 100px;
 }
 /*# sourceMappingURL=styles.css.map */
