--- a/styles/_beneficios.scss
+++ b/styles/_beneficios.scss
@@ -1,13 +1,15 @@
 .beneficios{
-    margin-top: 20px;
-
-
+    max-width: 1330px;
+    margin: auto;
+    margin-top: 50px;
+    border-bottom: 1px solid rgba(88, 38, 38, 0.74);
+    
     .container-beneficios{
         padding-top: 30px;
         display:flex;
         margin-bottom: 20px;
         img{
-            padding-left: 300px;
+            padding-left: 25%;
         }
 
 
