--- a/styles/_tiposdecafe.scss
+++ b/styles/_tiposdecafe.scss
@@ -3,20 +3,23 @@
     
     max-width: 1330px;
     margin: auto;
-    margin-top: 30px;
+    margin-top: 50px;
     border-bottom: 1px solid rgba(88, 38, 38, 0.74);
     
    .figures{
     display: grid;
     grid-template-columns: repeat(2,1fr);
     padding-left: 200px;
+    
   
     figure{
         margin-top: 20px;
-        margin-bottom: 20px;
+        margin-bottom: 30px;
         width: 400px;
         background: rgba(31, 30, 30, 0.582);
         border-radius:10px  ; 
+        box-shadow: 0 10px 10px black;
+        
         div {
         img{
             position: absolute; 
